--- a/index.html
+++ b/index.html
@@ -6,5 +6,65 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="shop-name">The Design Shop</h1>
+      <nav>
+        <ul>
+          <li><a href="#">WEEKLY RECOMMENDATIONS</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <li><a href="#">TDB</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="shop">
+        <!--  -->
+        <article class="card">
+          <a class="image-link" href="#">
+            <img class="product-img" src="#" alt="product picture" />
+          </a>
+          <div class="hover"></div>
+          <div class="description">
+            <div class="text-wrapper flex">
+              <h2 class="product-name">name</h2>
+              <p class="product-brand">design</p>
+            </div>
+            <h2 class="product-price">price</h3>
+          </div>
+        </article>
+        <!--  -->
+      </section>
+    </main>
+    <footer class="footer-flex">
+      <section class="info-section grid">
+        <article class="info">
+          <h3>The Design Shop</h3>
+          <p>Carefully curated online design store, founded and designed by <span>Ruby
+            Bacanovic.</span></p>
+        </article>
+        <article class="contact">
+          <h3>Contact</h3>
+          <a href="mailto:#">Email us</a>
+          <a href="#">Work with us</a>
+        </article>
+        <article class="newsletter">
+          <h3>Newsletter</h3>
+          <p>Click here to<span>subscribe.</span></p>
+          <p>Don't worry. We hate spam too.</p>
+          
+        </article>
+        <article class="sozial">
+          <h3>Find Us here</h3>
+          <a href="#">Fecebook</a>
+          <a href="#">Instagram</a>
+          <a href="#">Twitter</a>
+        </article>
+      </section>
+      <section class="copyright">
+        <p>© 2019 The Design Shop • The Design Blog</p>
+      </section>
+    </footer>
+  </body>
 </html>
+
