--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
     </header>
     <main>
       <section class="shop">
-        <!--  -->
+        <!-- #product1 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+
+        <!-- #product2 -->
         <article class="card">
           <a class="image-link" href="#">
             <img class="product-img" src="#" alt="product picture" />
@@ -33,9 +48,121 @@
             <h2 class="product-price">price</h3>
           </div>
         </article>
-        <!--  -->
+        <!-- #product3 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product4 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product5 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product6 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product7 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product8 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product1 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product9 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>        
       </section>
     </main>
+    <!-- #Footer -->
     <footer class="footer-flex">
       <section class="info-section grid">
         <article class="info">
