--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <section class="shop">
-        <!-- #product1 -->
+        <!-- !product1 Backpack-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -27,28 +27,28 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Kanken Art Laptop 15" Special Edition Backpack</h2>
+                <p class="product-brand">Fjallraven</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$119.00</h3>
             </div>
           </article>
 
-        <!-- #product2 -->
+        <!-- !product2 Lamp-->
         <article class="card">
           <a class="image-link" href="#">
-            <img class="product-img" src="#" alt="product picture" />
+            <img class="product-img" src="" alt="product picture" />
           </a>
           <div class="hover"></div>
           <div class="description">
             <div class="text-wrapper flex">
-              <h2 class="product-name">name</h2>
-              <p class="product-brand">design</p>
+              <h2 class="product-name">Swing Arm Wood Desk Lamp</h2>
+              <p class="product-brand">Tomons</p>
             </div>
-            <h2 class="product-price">price</h3>
+            <h2 class="product-price">$36.00</h3>
           </div>
         </article>
-        <!-- #product3 -->
+        <!-- !product3 HajoBackpack-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -56,13 +56,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Hajo Backpack</h2>
+                <p class="product-brand">Ucon Acrobatics</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$89.00</h3>
             </div>
           </article>
-        <!-- #product4 -->
+        <!-- !product4 Longboard -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -70,13 +70,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Zed Bamboo Longboard</h2>
+                <p class="product-brand">Retrospec</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$60.00</h3>
             </div>
           </article>
-        <!-- #product5 -->
+        <!-- !product5 Kettle -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -84,13 +84,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Electric Pour-Over Kettle</h2>
+                <p class="product-brand">Fellow</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$149.00</h3>
             </div>
           </article>
-        <!-- #product6 -->
+        <!-- !product6 Car -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -98,13 +98,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Woodie Vintage Car</h2>
+                <p class="product-brand">Candylab Toys</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$35.00</h3>
             </div>
           </article>
-        <!-- #product7 -->
+        <!-- !product7 Logo-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -112,13 +112,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Logo Modernism</h2>
+                <p class="product-brand">Taschen</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$60.00</h3>
             </div>
           </article>
-        <!-- #product8 -->
+        <!-- !product8 Rams-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -126,24 +126,10 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Dieter Rams: As Little Design as Possible</h2>
+                <p class="product-brand">Sophie Lovell</p>
               </div>
-              <h2 class="product-price">price</h3>
-            </div>
-          </article>
-        <!-- #product1 -->
-        <article class="card">
-            <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
-            </a>
-            <div class="hover"></div>
-            <div class="description">
-              <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
-              </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$150.00</h3>
             </div>
           </article>
         <!-- #product9 -->
@@ -159,7 +145,329 @@
               </div>
               <h2 class="product-price">price</h3>
             </div>
-          </article>        
+          </article>
+        <!-- #product10 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product11 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article> 
+          <!-- #product12 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article> 
+          <!-- #product13 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article> 
+          <!-- #product14 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product15 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product16 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product17 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product18 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product19 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product20 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product21 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product22 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product23 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>  
+          <!-- #product24 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product25 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+        <!-- #product26 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+          <!-- #product27 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+          <!-- #product28 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+          <!-- #product29 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+          <!-- #product30 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+          <!-- #product31 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>
+          <!-- #product32 -->
+        <article class="card">
+            <a class="image-link" href="#">
+              <img class="product-img" src="#" alt="product picture" />
+            </a>
+            <div class="hover"></div>
+            <div class="description">
+              <div class="text-wrapper flex">
+                <h2 class="product-name">name</h2>
+                <p class="product-brand">design</p>
+              </div>
+              <h2 class="product-price">price</h3>
+            </div>
+          </article>         
       </section>
     </main>
     <!-- #Footer -->
